# parallax

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
client/: CHANGELOG.md  CMakeLists.txt  gradlew  gradlew.bat  settings.gradle
client/app/: build.gradle  build.gradle.kts
client/app/src/androidTest/java/com/parallax/receiver/: ExampleInstrumentedTest.kt
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/parallax/client/: MainActivity.kt
client/app/src/main/java/com/parallax/receiver/: MainActivity.kt
client/app/src/main/res/drawable/: ic_launcher_foreground.xml
client/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
client/app/src/main/res/values/: colors.xml  themes.xml
client/gradle/: libs.versions.toml
client/gradle/wrapper/: gradle-wrapper.properties
client/include/: MediaCodecDecoder.h  OpenXRApp.h  ParallaxOpenXR.h  QuadRenderer.h  UdpReceiver.h
client/src/: MediaCodecDecoder.cpp  OpenXRApp.cpp  QuadRenderer.cpp  UdpReceiver.cpp  main.cpp
host/: CHANGELOG.md  Cargo.toml  build.rs
host/src/: cli.rs  lib.rs  main.rs
host/src/capture/: x11.rs
host/src/control/: crypto.rs  mod.rs  protocol.rs  server.rs  session.rs
host/src/core/: error.rs  logging.rs  settings.rs
host/src/display/: mod.rs
host/src/domain/: frame.rs  mod.rs  session.rs  stats.rs
host/src/drivers/capture/: x11.rs
host/src/drivers/encode/: h264_ffmpeg.rs  mod.rs
host/src/drivers/transport/: udp.rs
host/src/encode/: h264.rs
host/src/net/: mod.rs  packet.rs
host/src/presentation/cli/: run.rs
host/src/stream/: udp.rs
(+100 files in other folders)
