[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
x11 = { version = "2.21", features = ["xfixes", "xlib", "xrender"] }
ffmpeg-next = { version = "8", default-features = false, features = [
  "codec",
  "format",
  "software-scaling"
] }
hmac = "0.12"
hkdf = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
